--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/TriCitiesGDI">View On GitHub</a></li>
+          <li class="fork"><a href="https://github.com/gdi-tri-cities">View On GitHub</a></li>
         </nav>
       </div><!-- end header -->
 
@@ -28,46 +28,32 @@
 
       <section>
         <div id="title">
-          <h1>Tricitiesgdi.github.io</h1>
-          <p>Public profile for TriCitiesGDI</p>
+          <h1>GDI Tri-Cities</h1>
+          <p>Public profile for GDI Tri-Cities</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/TriCitiesGDI">TriCitiesGDI</a></span>
+          <span class="credits left">Project maintained by <a href="https://github.com/gdi-tri-cities">gdi-tri-cities</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
-
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-
+<div>
+        <h1>GDI Tri-Cities</h1>
+        <p><a href="http://www.girldevelopit.com/chapters/tri-cities" target="_blank">http://www.girldevelopit.com/chapters/tri-cities</a></p>
+        <p><a href="http://www.meetup.com/Girl-Develop-It-Tri-Cities/" target="_blank">http://www.meetup.com/Girl-Develop-It-Tri-Cities/</a></p>
+        <h2>Our Mission</h2>
+        <p>Girl Develop It is a nonprofit organization that exists to provide affordable and accessible programs to women who want to learn web and software development through mentorship and hands-on instruction.</p>
+        <h2>Our Vision</h2>
+        <p>Our vision is to create a network of empowered women who feel confident in their abilities to code and build beautiful web and mobile applications. By teaching women around the world from diverse backgrounds to learn software development, we can help women improve their careers and confidence in their everyday lives.</p>
+        <h2>Our Values</h2>
+        <p>We are committed to making sure women of all ages, races, education levels, income, and upbringing can build confidence in their skill set to develop web and mobile applications. Our goal is to provide powerful hands-on programs to women seeking professional help in software development and create basic to advanced web and mobile applications</p>
+        <h2>Our Events</h2>
+        <p>We have several kinds of events: networking, seminars and core curriculum. The networking meetings and seminars are free and open to anyone. The core curriculum classes have low fees and are for those who interested in getting heads down into some aspect of programming.</p>
+        <h2>GDI TriCities Core Curriculum</h2>
+        <p>Intro to Programming: For students with little or no knowledge of multiple languages, the course provides an overview of several languages and how to apply basic techniques.</p>
+        <p>Intro to HTML/CSS: The language of building websites. An introductory HTML and CSS course guiding students through basic HTML and CSS building for websites. The course breaks down the history, basics, functions, and applicability of the language. This is typically a 2-day weekend or 4-week course (8 hours total).</p>
+        <p>JavaScript/jQuery: The language of interactivity on the web. An introductory course to JavaScript/jQuery teaches the foundation of basic JavaScript, to the jQuery library, dynamic HTML, JSON and APIs. Basic knowledge of HTML is needed on part of the student.  This is typically a 4-week course (8 hours total).</p>
+        <p></p>Git/GitHub: The git course teaches student version control management in an open-source environment that encompasses small-large scale change in documents, computer programs, and other collections of information.</p>
+        <p>Intermediate HTML5/CSS3: An intermediate class for students with prior HTML and CSS knowledge, this course teaches the fundamentals of HTML5 and CSS3. Students will learn information on advanced selectors, web fonts for typography, graphical enhancements, and more. This is typically a 4-week course (8 hours total).</p>
+        <p>UX: The course teaches the fundamentals of web experience and what defines an excellent user experience through lecture, discussion and hands-on exercises. No coding or design experience is required. (Workshop)</p>
+        <p>API: Taught at the advanced level, this course teaches JavaScript-based APIs actually work behind the scenes and firsthand experience using API’s. The course introduces students to various API’s to enhance websites.</p>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
